--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<a href="https://www.youtube.com/watch?v=n_FCrCQ6-bA">My current favourite song is 295</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
